# djangular-cli

./: .gitignore  .travis.yml  MANIFEST.in  README.md  VERSION  pyproject.toml  requirements.txt  requires.txt  setup.py  tox.ini
djangular_cli/: __init__.py  __main__.py  __version__.py  cli.py  djangular.py
djangular_cli/config/: app_settings.py
djangular_cli/config/style/: color_style.py  style.py  widget.py
djangular_cli/docs/: CREDITS
djangular_cli/docs/license/: LICENSE  LICENSE.md  LICENSE.python
djangular_cli/generate/: create.py  django-admin  g_angular.py  g_django.py  g_venv.py
djangular_cli/git/: git.py
djangular_cli/management/: activate.py  commands.py  exceptions.py  find.py  prompts.py  utils.py
djangular_cli/serve/: serve.py
djangular_cli/serve/templatetags/: serve_tags.py
djangular_cli/terminal/: __init__.py  cli.py  color_print.py  custom_prompts.py  prompt.py
djangular_cli/terminal/prompts/: __init__.py  checkbox.py  rawlist.py
